--- a/package.json
+++ b/package.json
@@ -9,14 +9,19 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@apollo/client": "^3.7.10",
     "expo": "~48.0.9",
+    "expo-constants": "^14.2.1",
     "expo-status-bar": "~1.4.4",
+    "graphql": "^16.6.0",
     "react": "18.2.0",
-    "react-native": "0.71.4"
+    "react-native": "0.71.4",
+    "react-native-dotenv": "^3.4.8"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.0.14",
+    "babel-plugin-transform-inline-environment-variables": "^0.4.4",
     "typescript": "^4.9.4"
   },
   "private": true
