--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.7.10",
+    "@react-native-community/netinfo": "^9.3.7",
     "expo": "~48.0.9",
     "expo-status-bar": "~1.4.4",
     "graphql": "^16.6.0",
